--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
     </head>
     <body>
         <!-- Vue 3 -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.20.0/axios.min.js"></script>
-
         <script src="https://unpkg.com/vue@3"></script>
 
         <div id="app">
@@ -22,7 +20,13 @@
                     {{ email }}
                 </li>
             </ul>
+            <p v-else>
+                Mail list is loading...
+            </p>
         </div>
+
+        <!-- axios -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.20.0/axios.min.js"></script>
 
         <script src="js/script.js"></script>
     </body>
